Actually loading (placeholder) questions with js

--- a/index.htm
+++ b/index.htm
@@ -23,20 +23,20 @@
             <li role="presentation"><a href="#">Test</a></li>
           </ul>
         </div>
-        <div class="col-xs-9">
-          <!-- Question -->
+        <div class="col-xs-9" id="questions">
+          <!-- Question START -->
           <div class="row">
             <div class="col-xs-12">
               <div class="panel panel-default">
                 <div class="panel-heading">
-                  <h2 class="panel-title question" id="1">Question?</h2>
+                  <h2 class="panel-title question" id="question_1">Question?</h2>
                 </div>
                 <div class="panel-body">
                   <ul class="nav nav-pills nav-justified answers">
-                    <li role="presentation" class="answer"><a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </a></li>
+                    <li role="presentation" class="answer"><a href="#">Dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </a></li>
                     <li role="presentation" class="answer"><a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</a></li>
                     <li role="presentation" class="answer"><a href="#">Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</a></li>
-                    <li role="presentation" class="answer"><a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</a></li>
+                    <li role="presentation" class="answer"><a href="#">Ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</a></li>
                   </ul>
                 </div>
               </div>
