--- a/index.htm
+++ b/index.htm
@@ -25,11 +25,11 @@
         </div>
         <div class="col-xs-9" id="questions">
           <!-- Question START -->
-          <div class="row">
+          <div class="row" id="question_1">
             <div class="col-xs-12">
               <div class="panel panel-default">
                 <div class="panel-heading">
-                  <h2 class="panel-title question" id="question_1">Question?</h2>
+                  <h2 class="panel-title question">Question?</h2>
                 </div>
                 <div class="panel-body">
                   <ul class="nav nav-pills nav-justified answers">
