Questions loaded from XML

--- a/index.htm
+++ b/index.htm
@@ -30,6 +30,7 @@
               <div class="panel panel-default">
                 <div class="panel-heading">
                   <h2 class="panel-title question">Question?</h2>
+                  <img src="http://lorempixel.com/150/150" />
                 </div>
                 <div class="panel-body">
                   <ul class="nav nav-pills nav-justified answers">
