--- a/index.htm
+++ b/index.htm
@@ -24,26 +24,11 @@
           </ul>
         </div>
         <div class="col-xs-9" id="questions">
-          <!-- Question START -->
-          <div class="row" id="question_1">
-            <div class="col-xs-12">
-              <div class="panel panel-default">
-                <div class="panel-heading">
-                  <h2 class="panel-title question">Question?</h2>
-                  <img src="http://lorempixel.com/150/150" />
-                </div>
-                <div class="panel-body">
-                  <ul class="nav nav-pills nav-justified answers">
-                    <li role="presentation" class="answer"><a href="#">Dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </a></li>
-                    <li role="presentation" class="answer"><a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</a></li>
-                    <li role="presentation" class="answer"><a href="#">Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</a></li>
-                    <li role="presentation" class="answer"><a href="#">Ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</a></li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-          </div>
-          <!-- Question END -->
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-9 col-xs-offset-3">
+          <button type="button" class="btn btn-info btn-lg btn-block" id="answerBtn">Besvara</button>
         </div>
       </div>
     </div>
