--- a/index.htm
+++ b/index.htm
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Multimedia Quiz</title>
 
+    <link href="css/quiz.css" rel="stylesheet">
     <link href="css/bootstrap.min.css" rel="stylesheet">
   </head>
   <body>
