Can click on categories
But does nothing

--- a/index.htm
+++ b/index.htm
@@ -17,11 +17,8 @@
         </div>
       <div class="row">
         <div class="col-xs-3">
-          <ul class="nav nav-pills nav-stacked">
-            <li role="presentation" class="active"><a href="#">Test</a></li>
-            <li role="presentation"><a href="#">Test</a></li>
-            <li role="presentation"><a href="#">Test</a></li>
-            <li role="presentation"><a href="#">Test</a></li>
+          <ul class="nav nav-pills nav-stacked categories">
+            <li role="presentation" class="active category"><a href="#">Alla kategorier</a></li>
           </ul>
         </div>
         <div class="col-xs-9" id="questions">
