--- a/index.htm
+++ b/index.htm
@@ -25,12 +25,15 @@
           <div class="row">
             <div class="btn-group" data-toggle="buttons">
               <label class="btn btn-primary settingsButton active" setting="shuffleQuestions">
-                <input type="checkbox" autocomplete="off" checked>Shuffle questions
+                <input type="checkbox" autocomplete="off" checked>Slumpa frågor
               </label>
               <label class="btn btn-primary settingsButton active" setting="shuffleAnswers">
-                <input type="checkbox" autocomplete="off" checked>Shuffle answers
+                <input type="checkbox" autocomplete="off" checked>Slumpa svar
               </label>
             </div>
+          </div>
+          <div class="row">
+            <small>Inställningar uppdateras när sidan laddas om.</small>
           </div>
         </div>
         <div class="col-xs-9" id="questions">
