Try again now resets to same category

--- a/index.htm
+++ b/index.htm
@@ -24,10 +24,10 @@
           </div>
           <div class="row">
             <div class="btn-group" data-toggle="buttons">
-              <label class="btn btn-primary settingsButton active" setting="shuffleQuestions">
+              <label class="btn btn-info settingsButton active" setting="shuffleQuestions">
                 <input type="checkbox" autocomplete="off" checked>Slumpa frågor
               </label>
-              <label class="btn btn-primary settingsButton active" setting="shuffleAnswers">
+              <label class="btn btn-info settingsButton active" setting="shuffleAnswers">
                 <input type="checkbox" autocomplete="off" checked>Slumpa svar
               </label>
             </div>
