Readme and UI fix

--- a/index.htm
+++ b/index.htm
@@ -27,7 +27,7 @@
               <label class="btn btn-info settingsButton active" setting="shuffleQuestions">
                 <input type="checkbox" autocomplete="off" checked>Slumpa frågor
               </label>
-              <label class="btn btn-info settingsButton active" setting="shuffleAnswers">
+              <label class="btn btn-info settingsButton active disabled" setting="shuffleAnswers">
                 <input type="checkbox" autocomplete="off" checked>Slumpa svar
               </label>
             </div>
