Fixes a bug where click events on categories where added multiple times

--- a/index.htm
+++ b/index.htm
@@ -33,7 +33,7 @@
             </div>
           </div>
           <div class="row">
-            <small>Inställningar uppdateras när sidan laddas om.</small>
+            <small>Frågor och svar slumpas när sidan laddas om.</small>
           </div>
         </div>
         <div class="col-xs-9" id="questions">
