--- a/index.htm
+++ b/index.htm
@@ -24,16 +24,29 @@
           </div>
           <div class="row">
             <div class="btn-group" data-toggle="buttons">
-              <label class="btn btn-info settingsButton active" setting="shuffleQuestions">
-                <input type="checkbox" autocomplete="off" checked>Slumpa frågor
+              <label class="btn btn-info shuffleButton active" setting="shuffleQuestions">
+                <input type="checkbox" autocomplete="off" checked>Slumpfrågor
               </label>
-              <label class="btn btn-info settingsButton active" setting="shuffleAnswers">
-                <input type="checkbox" autocomplete="off" checked>Slumpa svar
+              <label class="btn btn-info shuffleButton active" setting="shuffleAnswers">
+                <input type="checkbox" autocomplete="off" checked>Slumpsvar
               </label>
             </div>
-          </div>
-          <div class="row">
-            <small>Frågor och svar slumpas när sidan laddas om.</small>
+            <small>Svarsordning slumpas när sidan laddas om. Frågeordning varje gång frågorna visas.</small>
+            <div class="btn-group" data-toggle="buttons">
+              <label class="btn btn-info maxQuestionsButton active" setting="maxQuestions">
+                <input type="radio" autocomplete="off" value="0" checked>Alla
+              </label>
+              <label class="btn btn-info maxQuestionsButton" setting="maxQuestions">
+                <input type="radio" autocomplete="off" value="5">5
+              </label>
+              <label class="btn btn-info maxQuestionsButton" setting="maxQuestions">
+                <input type="radio" autocomplete="off" value="10">10
+              </label>
+              <label class="btn btn-info maxQuestionsButton" setting="maxQuestions">
+                <input type="radio" autocomplete="off" value="25">25
+              </label>
+            </div>
+            <small>Begränsar antalet frågor som visas. Fungerar bäst om man också slumpar frågor.</small>
           </div>
         </div>
         <div class="col-xs-10" id="questions">
