Added change course button + fixed answer shuffling

--- a/index.htm
+++ b/index.htm
@@ -31,7 +31,7 @@
                 <input type="checkbox" autocomplete="off" checked>Slumpsvar
               </label>
             </div>
-            <small>Svarsordning slumpas när sidan laddas om. Frågeordning varje gång frågorna visas.</small>
+            <small>Slumpar ordningen på frågor och/eller svar.</small>
             <div class="btn-group" data-toggle="buttons">
               <label class="btn btn-info maxQuestionsButton active" setting="maxQuestions">
                 <input type="radio" autocomplete="off" value="0" checked>Alla
@@ -47,6 +47,9 @@
               </label>
             </div>
             <small>Begränsar antalet frågor som visas. Fungerar bäst om man också slumpar frågor.</small>
+          </div>
+          <div class="row">
+            <button type="button" class="btn btn-danger btn-block" id="changeCourseBtn">Byt kurs</button>
           </div>
         </div>
         <div class="col-xs-10" id="questions">
