--- a/index.htm
+++ b/index.htm
@@ -63,7 +63,7 @@
     </div>
     <div class="row">
       <div class="col-xs-12" id="footer">
-        <small>Made with ❥ by <a href="http://github.com/anton-g/course-quiz/">Anton</a></small>
+        <small>Made with ❥ by <a href="http://github.com/anton-g/course-quiz/">Anton</a> - v 0.95</small>
       </div>
     </div>
     <!-- START MODAL -->
