--- a/index.htm
+++ b/index.htm
@@ -15,48 +15,76 @@
         <div class="col-xs-12 text-center">
           <h1 id="titleLabel">Quiz</h1>
         </div>
-      <div class="row">
-        <div class="col-xs-2">
-          <div class="row">
-            <ul class="nav nav-pills nav-stacked categories">
-              <li role="presentation" class="active category"><a href="#">Alla kategorier</a></li>
-            </ul>
-          </div>
-          <div class="row">
-            <div class="btn-group" data-toggle="buttons">
-              <label class="btn btn-info shuffleButton active" setting="shuffleQuestions">
-                <input type="checkbox" autocomplete="off" checked>Slumpfrågor
-              </label>
-              <label class="btn btn-info shuffleButton active" setting="shuffleAnswers">
-                <input type="checkbox" autocomplete="off" checked>Slumpsvar
-              </label>
-            </div>
-            <small>Slumpar ordningen på frågor och/eller svar.</small>
-            <div class="btn-group" data-toggle="buttons">
-              <label class="btn btn-info maxQuestionsButton active" setting="maxQuestions">
-                <input type="radio" autocomplete="off" value="0" checked>Alla
-              </label>
-              <label class="btn btn-info maxQuestionsButton" setting="maxQuestions">
-                <input type="radio" autocomplete="off" value="5">5
-              </label>
-              <label class="btn btn-info maxQuestionsButton" setting="maxQuestions">
-                <input type="radio" autocomplete="off" value="10">10
-              </label>
-              <label class="btn btn-info maxQuestionsButton" setting="maxQuestions">
-                <input type="radio" autocomplete="off" value="25">25
-              </label>
-            </div>
-            <small>Begränsar antalet frågor som visas. Fungerar bäst om man också slumpar frågor.</small>
-          </div>
-          <div class="row">
-            <button type="button" class="btn btn-danger btn-block" id="changeCourseBtn">Byt kurs</button>
-          </div>
-        </div>
-        <div class="col-xs-10" id="questions">
+      </div>
+      <div class="row visible-sm-block visible-xs-block">
+        <div class="col-xs-12">
+          <button type="button" class="btn btn-block btn-default" data-toggle="collapse" data-target="#allSettings" aria-expanded="false" id="settingsToggle">Toggle settings</button>
         </div>
       </div>
       <div class="row">
-        <div class="col-xs-10 col-xs-offset-2">
+        <div class="col-xs-12 col-md-2 collapse in" id="allSettings">
+          <div class="row">
+            <div class="col-xs-12">
+              <ul class="nav nav-pills nav-stacked categories">
+                <li role="presentation" class="active category"><a href="#">Alla kategorier</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-xs-12">
+              <div class="row">
+                <div class="col-xs-12">
+                  <div class="btn-group btn-group-justified" data-toggle="buttons">
+                    <label class="btn btn-info shuffleButton active" setting="shuffleQuestions">
+                      <input type="checkbox" autocomplete="off" checked>Frågor
+                    </label>
+                    <label class="btn btn-info shuffleButton active" setting="shuffleAnswers">
+                      <input type="checkbox" autocomplete="off" checked>Svar
+                    </label>
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-xs-12">
+                  <small>Slumpar ordningen på frågor och/eller svar.</small>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-xs-12">
+                  <div class="btn-group btn-group-justified" data-toggle="buttons">
+                    <label class="btn btn-info maxQuestionsButton active" setting="maxQuestions">
+                      <input type="radio" autocomplete="off" value="0" checked>Alla
+                    </label>
+                    <label class="btn btn-info maxQuestionsButton" setting="maxQuestions">
+                      <input type="radio" autocomplete="off" value="5">5
+                    </label>
+                    <label class="btn btn-info maxQuestionsButton" setting="maxQuestions">
+                      <input type="radio" autocomplete="off" value="10">10
+                    </label>
+                    <label class="btn btn-info maxQuestionsButton" setting="maxQuestions">
+                      <input type="radio" autocomplete="off" value="25">25
+                    </label>
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-xs-12">
+                  <small>Begränsar antalet frågor som visas. Fungerar bäst om man också slumpar frågor.</small>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-xs-12">
+              <button type="button" class="btn btn-danger btn-block" id="changeCourseBtn">Byt kurs</button>
+            </div>
+          </div>
+        </div>
+        <div class="col-xs-12 col-md-10" id="questions">
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12 col-md-10 col-md-offset-2">
           <button type="button" class="btn btn-info btn-lg btn-block" id="answerBtn">Besvara</button>
         </div>
       </div>
