--- a/index.htm
+++ b/index.htm
@@ -18,7 +18,7 @@
       </div>
       <div class="row visible-sm-block visible-xs-block">
         <div class="col-xs-12">
-          <button type="button" class="btn btn-block btn-default" data-toggle="collapse" data-target="#allSettings" aria-expanded="false" id="settingsToggle">Toggle settings</button>
+          <button type="button" class="btn btn-block btn-default" data-toggle="collapse" data-target="#allSettings" aria-expanded="false" id="settingsToggle" data-close-text="Visa meny" data-open-text="Göm meny">Göm meny</button>
         </div>
       </div>
       <div class="row">
@@ -91,7 +91,7 @@
     </div>
     <div class="row">
       <div class="col-xs-12" id="footer">
-        <small>Made with ❥ by <a href="http://github.com/anton-g/course-quiz/">Anton</a> - v 0.96</small>
+        <small>Made with ❥ by <a href="http://github.com/anton-g/course-quiz/">Anton</a> - v 0.97</small>
       </div>
     </div>
     <!-- START MODAL -->
